--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -18,6 +18,7 @@ add_subdirectory(zlib)
 target_include_directories(zlibstatic INTERFACE
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>"
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/zlib>"
 )
 
 target_compile_options(zlibstatic PRIVATE "-fvisibility=hidden")
