Removed OpenCV dependency from the main mobile_robotics_framework library and moved it into the actual apps CMakeLists to allow more selective linking

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,2 +1,15 @@
+find_package(OpenCV REQUIRED COMPONENTS
+    core
+    imgcodecs
+    imgproc
+    videoio
+)
+
 add_executable(rover "rover.cpp")
-target_link_libraries(rover PRIVATE mobile_robotics_framework::mobile_robotics_framework)
+target_link_libraries(rover PRIVATE
+    mobile_robotics_framework::mobile_robotics_framework
+    opencv_core
+    opencv_imgcodecs
+    opencv_imgproc
+    opencv_videoio
+)
